{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 13,
  "lineage": "03c4b420-1e08-90f0-a744-78033f89fc05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "first_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9c9ca3c7a2b6269",
            "arn": "arn:aws:ec2:ap-south-1:412307050439:elastic-ip/eipalloc-0a9c9ca3c7a2b6269",
            "domain": "vpc",
            "id": "eipalloc-0a9c9ca3c7a2b6269",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-183-120.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.183.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "abhik",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c179eced2eb9b5b",
            "arn": "arn:aws:ec2:ap-south-1:412307050439:instance/i-0c98592d10a528db8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c98592d10a528db8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ae925a25d55c022",
            "private_dns": "ip-172-31-12-79.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.79",
            "public_dns": "ec2-13-203-105-103.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.105.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e9eb8b0a9717fb0b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceedcdec132a44b3",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06de3d0644f75f31f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group/sg-06de3d0644f75f31f",
            "description": "Allow TLS inbound traffic ",
            "egress": [],
            "id": "sg-06de3d0644f75f31f",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "412307050439",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07091056f205be114"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group-rule/sgr-080e9be706c6579c6",
            "cidr_ipv4": "13.203.183.120/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-080e9be706c6579c6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06de3d0644f75f31f",
            "security_group_rule_id": "sgr-080e9be706c6579c6",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.first_eip",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}